--- a/wasm/index.html
+++ b/wasm/index.html
@@ -2,13 +2,14 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
+		<script src="coi-serviceworker.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
 		<link rel="stylesheet" href="style.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>QML online</title>
+		<title>DLockers Server</title>
 	</head>
 	<body onload="init();">
 		<div class="pair">
