--- a/wasm/index.html
+++ b/wasm/index.html
@@ -4,17 +4,22 @@
 		<meta charset="utf-8">
 		<script src="coi-serviceworker.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu Condensed' rel='stylesheet'>
 		<link rel="stylesheet" href="style.css">
+		<script type="module" src="https://md-block.verou.me/md-block.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<title>DLockers Server</title>
 	</head>
-	<body onload="init();">
+	<body onload="init();LoadFile('https://raw.githubusercontent.com/EddyTheCo/DLockersServer/main/README.md');">
 		<div class="pair">
 			<div class="codeArea">
-				<div id="editor" >
+				<div id="editor" style="margin-left: 1em;">
+					<md-block id="md" >
+				       </md-block>
 				</div>
 			</div>
 			<div class="playArea" >
@@ -59,28 +64,22 @@
 																});
 											qtLoader.loadEmscriptenModule("server_main");
 										}
+					function LoadFile(readme) {
+					console.log(readme);
+					axios.get(readme).then(function (response) {
+					console.log(response.data);
+					document.querySelector('#md').mdContent= response.data;
+					}).catch(function (error) {
+					console.log(error);																	});
+					}
 				</script>
 				<script type="text/javascript" src="qtloader.js"></script>
 			</div>
 		</div>
 		<footer>
-			<div class="fcont">
-				<div class="fdiv" >
-					Developed by <a href="https://eddytheco.github.io/" target="_blank" > Eddy</a>
-				</div>
-					<div class="fdiv">
-						<div class="fdivsub">
-							<div class="ffdiv">
-								<span>Powered by</span>
-							</div>
-							<div class="ffdiv">
-								<a href="https://github.com/" target="_blank"><img id="gitHublogo" src="img/gitHublogo.png"></img></a>
-							</div>
-							<div class="ffdiv">
-								<a href="https://www.qt.io/" target="_blank"><img id="qtlogo" src="img/qtlogo.svg"></img></a>
-							</div>
-						</div>
-					</div>
+			<div class="fdiv" style="text-align:center;" >
+				<a style="display: contents; width:30px;" href="https://github.com/EddyTheCo/DLockersServer" target="_blank"><img style="width:30px;" id="gitHublogo" src="img/gitHublogo.png"></img></a>
+				Developed by <a href="https://eddytheco.github.io/" target="_blank" > Eddy</a>
 			</div>
 		</footer>
 	</body>
