fixed the design

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -17,7 +17,7 @@
 	<body onload="init();LoadFile('https://raw.githubusercontent.com/EddyTheCo/DLockersServer/main/README.md');">
 		<div class="pair">
 			<div class="codeArea">
-				<div id="editor" style="margin-left: 1em;">
+				<div id="editor" >
 					<md-block id="md" >
 				       </md-block>
 				</div>
