set the style on the css file

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -27,7 +27,7 @@
 				<div id="editor" style="margin:0px;">
 					<md-block  src="https://raw.githubusercontent.com/EddyTheCo/DLockersServer/main/README.md">
 						       </md-block>
-					<div id="buyme" style="float:left;width:95%;height:30%;margin-left: 2.5%;">
+					<div id="buyme" >
 						<h3 style="text-align: center;">Buy Me a Coffee</h3>
 						</div>
 				</div>
