--- a/wasm/wasm/index.html
+++ b/wasm/wasm/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	  <meta http-equiv="Refresh" content="0; url='https://eddytheco.github.io/DLockersServer/'" />
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../style.css">
   </head>
   <body>
 	  <H1>You will be redirected soon! If not, click <a href="https://eddytheco.github.io/DLockersServer/">here</H1>
